# hospital-api

./: .env.example  README.md  pyproject.toml  requirements.txt
apps/: urls.py  utils.py
apps/accounts/: admin.py  forms.py  manager.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_user_accounts_us_email_74c8d6_idx.py  0003_alter_user_patronymic.py
apps/doctors/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/doctors/migrations/: 0001_initial.py  0002_alter_doctor_image.py  0002_direction_slug.py  0003_alter_direction_slug.py  0003_service.py  0004_alter_direction_slug.py  0005_service_slug.py  0006_doctor_slug.py
apps/managers/: apps.py  models.py  serializers.py
apps/managers/migrations/: 0001_initial.py
apps/patients/: models.py  serializers.py
apps/patients/migrations/: 0001_initial.py
hospital_api/: asgi.py  config.py  s3_storage.py  settings.py  urls.py  wsgi.py
templates/email/: user_reset_password.html  user_reset_password.txt
