[tool.poetry]
name = "hospital-api"
version = "0.1.0"
description = ""
authors = ["dmitriy <dmitriydmgora@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.1"
environs = "^11.0.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.3.0"}
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.3.1"
django-rest-passwordreset = "^1.4.1"
django-storages = "^1.14.3"
boto3 = "^1.34.131"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
